現在のページをナビゲーションバーで知らせる

--- a/frontend/src/styles/Navigation.module.css
+++ b/frontend/src/styles/Navigation.module.css
@@ -1,4 +1,8 @@
-/* Navigation.module.css */
+.active {
+  color: red !important;
+  font-weight: bold;
+} 
+
 .customNavbar {
   background-color: #fef6d1;  /* 薄い黄色 */
   border-bottom: 2px solid #f1d19f;  /* 薄いゴールドのボーダー */
