--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -14,43 +14,37 @@
 .baloonSet {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px; /* 変更 */
+  justify-content: space-around; /* 追加 */
 }
 
 .baloon {
-  width: 100px;
-  height: 100px;
-  border: solid 1px black;
-  border-radius: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: black;
   text-align: center;
-  background-color: #f0f0f0;
-  animation: float 2s ease-in-out infinite;
-  animation-delay: calc(var(--i) * 0.2s); /* 追加 */
-  transition: background-color 0.3s ease;
+  animation: float 5s ease-in-out infinite;
+  animation-delay: calc(var(--i) * 0.2s);
 }
 
 .baloonText {
   font-size: 1.2em;
+  margin-bottom: 5px;
 }
 
 .baloonValue {
-  font-size: 1.5em;
-  font-weight: bold;
+  font-size: 1em;
 }
 
 @keyframes float {
-  0% {
+  0%, 100% {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
+    transform: translateY(-20px);
   }
 }
 
