--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,3 +1,8 @@
+h2 {
+  font-size: 40px;
+  font-weight: bold;
+}
+
 .baloon {
   transition: transform 0.5s ease-in-out;
 }
@@ -19,6 +24,12 @@
     display: inline-block;
   }
 
+  .total-assets {
+    font-size: 2em;
+    color: #4CAF50; /* 緑色 */
+    margin-bottom: 20px;
+  }
+  
 .baloonSet {
   display: flex;
   flex-wrap: wrap;
